--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,25 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.flex-column, .heading {
+  flex-direction: column;
+
+}
+
+.start {
+  gap: var(--spacing-lg);
+}
+
+.heading {
+  height: 80vh;
+  text-align: center;
+  gap: var(--spacing);
+  background: transparent;
+  & button {
+    background: rgba(255, 255, 255, 0.12);
+  }
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -36,6 +55,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p {
+  padding:var(--spacing) 0;
 }
 
 header,
@@ -50,9 +73,14 @@ header .playing {
   max-width: 1300px;
   width: 100%;
 }
+
 header {
+  .spotify {
+    display: none;
+  }
   justify-content: center;
   & iframe {
+    margin: var(--spacing);
     max-width: 700px;
     border-radius: 1rem;
     background: transparent;
@@ -96,15 +124,52 @@ header {
   cursor: pointer;
 }
 
+footer:has(.spotify){
+  justify-content: start;
+  gap: var(--spacing-lg);
+  & .controls {
+    margin-left: var(--spacing);
+  }
+}
+
 footer {
   & .playing {
     background: none !important;
   }
   .audio-details {
-    width: 10vw;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    width: 200px;
+    & * {
+      width: 200px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+  }
+}
+
+button {
+  cursor: pointer;
+  border: 0;
+  font-size: 1rem;
+  border-radius: var(--border-radius);
+  background: transparent;
+  transition: .6s;
+  box-shadow: 0 0 0 0  rgba(255, 255, 255, 0.2);
+
+}
+
+button:hover {
+  box-shadow: 0 0 0 10px transparent;
+  background: rgba(255, 255, 255, 0.12);
+}
+
+.end-of-results {
+  padding: var(--spacing-lg);
+  flex-direction: column;
+  gap: var(--spacing);
+  & button {
+    margin-right: auto;
+    border: 1px solid rgba(255, 255, 255, 0.2);
   }
 }
 
@@ -129,12 +194,16 @@ header .audio-caption img {
   }
 }
 
-main,
 .playlist-wrapper .audio-caption,
 .searchbar,
 footer,
-.controls button {
+button {
   padding: var(--spacing);
+}
+
+nav {
+  padding: 0 var(--spacing);
+  gap: var(--spacing-lg);
 }
 
 .not-found {
@@ -159,8 +228,13 @@ footer,
   position: sticky;
   top: 0;
   z-index: 1;
+  & form {
+    margin: auto;
+    width: 90%;
+    max-width: 700px;
+  }
   & input {
-    width: 400px;
+    width: 100%;
     padding: var(--spacing) var(--spacing-lg);
     border-radius: var(--spacing);
     border: 0;
@@ -263,16 +337,26 @@ footer {
   }
 }
 
+.error {
+  width: 50vw;
+  text-align: center;
+  gap: 1rem;
+  padding: var(--spacing);
+  background: hsla(0, 67%, 51%, 0.241);
+}
+
 .controls {
-  & button {
-    border: 0;
-    background: transparent;
-  }
   & .progress-container {
     gap: var(--spacing);
+    padding: 0 var(--spacing-lg);
+    margin-right: var(--spacing);
   }
   & .progress-container input {
     width: 40vw;
+  }
+  & button {
+    padding: var(--spacing);
+    border-radius: 50%;
   }
 }
 
@@ -296,6 +380,18 @@ input[type="range"]::-webkit-slider-runnable-track,
 input[type="range"]::-moz-range-track {
   background: rgba(255, 255, 255, 0.08);
   border-radius: var(--spacing);
+}
+
+.sr-text {
+  border: 0;
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  word-wrap: normal !important;
 }
 
 header img,
