--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,11 @@ body {
   max-width: 100vw;
 }
 
+::placeholder {
+  font-size: 1rem;
+  opacity: 1;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
@@ -143,6 +148,7 @@ footer {
 button {
   cursor: pointer;
   border: 0;
+  color: white;
   font-size: 1rem;
   border-radius: var(--border-radius);
   background: transparent;
@@ -228,6 +234,8 @@ nav {
   }
   & input {
     width: 100%;
+    color: white;
+    background: rgba(255,255,255, .12);
     padding: var(--spacing) var(--spacing-lg);
     border-radius: var(--spacing);
     border: 0;
