--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -491,6 +491,10 @@ header img {
 
 
 @media screen and (max-width: 670px) {
+
+  .blog-card .header {
+    aspect-ratio: 3 / 1;
+  }
   .controls {
     justify-content: center;
   }
@@ -507,4 +511,8 @@ header img {
     .audio-details{
       width: calc(100% - 100px);
     }
+    input[type="range"] {
+      background: skyblue;
+    }
+    
 }
